--- a/static/public/style.css
+++ b/static/public/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
-    background-color: lightskyblue;
+    background-color: #242525;
     font-family: sans-serif;
     color: white;
+    text-align: center;
 }
