--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,7 +12,11 @@
         <h1>Find capable teammates to play games with</h1>
         <form action="/" method="POST">
             <label for="game">Which game do you play?</label>
-            <input type="text" name="game">
+            <select name="game">
+                <option value="Counter Strike Global Offensive" >Counter Strike</option>
+                <option value="Valorant">Valorant</option>
+                <option value="Rainbow six siege">Rainbow six siege</option>
+            </select>
             <label for="platform">Which platform do you play on?</label>
             <select name="platform">
                 <option value="pc" >pc</option>
