--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
     <%- include('../partials/header'); %>
 </header>
 
-<body class="root">
+<body class="main">
     <main>
         <h1>Find capable teammates to play games with</h1>
         <form action="/" method="POST">
