--- a/views/pages/myprofile.ejs
+++ b/views/pages/myprofile.ejs
@@ -8,12 +8,10 @@
 </header>
 
 <body>
-    <h1>User who also plays
-        <%= data.game %> on
-            <%= data.platform %>, and is ranked
-                <%= data.rank %>
-    </h1>
 
 </body>
+<footer>
+    <%- include('../partials/footer'); %>
+</footer>
 
 </html>
