--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,1 +1,8 @@
-Header/nav
+<nav>
+    <ul>
+        <li><a href="#">home</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="#">my profile</a></li>
+        <li><a href="#">login</a></li>
+    </ul>
+</nav>
