--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,8 @@
 <nav>
     <ul>
-        <li><a href="#">home</a></li>
+        <li><a href="/">home</a></li>
         <li><a href="#">about</a></li>
-        <li><a href="#">my profile</a></li>
+        <li><a href="profile">profile</a></li>
         <li><a href="#">login</a></li>
     </ul>
 </nav>
