--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -8,11 +8,11 @@
 </header>
 
 <body>
-    <h1>User who also plays
-        <%= data.game %> on
-            <%= data.platform %>, and is ranked
-                <%= data.rank %>
+
+    <h1>
+        User:
     </h1>
+    <%= resultString %>
 
 </body>
 
