--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -7,8 +7,33 @@
     <%- include('../partials/header'); %>
 </header>
 
-<body>
+<body class="profile">
     <h1>My profile</h1>
+    <section>
+        <img src="../images/profile_picture.jpg" alt="picture of user">
+        <h3>Name</h3>
+        <p>Daniel</p>
+        <h3>Nationality</h3>
+        <p>Dutch</p>
+        <h3>Age</h3>
+        <p>23</p>
+    </section>
+    <section>
+        <h3>Games</h3>
+        <p>Rainbow 6 Siege</p>
+        <h3>Platform</h3>
+        <p>PC</p>
+        <h3>Experience</h3>
+        <p>High platinum elo</p>
+    </section>
+    <form method="GET" action="/edit">
+        <button type="submit">Edit</button>
+    </form>
+    <% if (typeof details == 'object' && details) { %>
+        <h3>
+            <%= details.name %>
+        </h3>
+        <% } %>
 </body>
 <footer>
     <%- include('../partials/footer'); %>
