--- a/views/pages/edit.ejs
+++ b/views/pages/edit.ejs
@@ -21,12 +21,27 @@
             <input type="text" name="age">
         </section>
         <section>
-            <h3>Games</h3>
-            <p>Rainbow 6 Siege</p>
-            <h3>Platform</h3>
-            <p>PC</p>
-            <h3>Experience</h3>
-            <p>High platinum elo</p>
+            <label for="game">Games</label>
+            <select name="game">
+                <option value="Counter Strike Global Offensive" >Counter Strike</option>
+                <option value="Valorant">Valorant</option>
+                <option value="Rainbow Six Siege">Rainbow Six Siege</option>
+                <option value="Rocket League">Rocket League</option>
+                <option value="Apex Legends">Apex Legends</option>
+            </select>
+            <label for="playertype">Type of player</label>
+            <select name="playertype">
+                <option value="Competitive" >Competitive</option>
+                <option value="Casual">Casual</option>
+            </select>
+            <label for="platform">Platform</label>
+            <select name="platform">
+                <option value="PC" >PC</option>
+                <option value="Xbox">Xbox</option>
+                <option value="PS4">PS4</option>
+            </select>
+            <label for="rank">Rank</label>
+            <input type="text" name="rank">
         </section>
         <input type="submit" value="Save changes">
     </form>
