--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -9,31 +9,46 @@
 
 <body class="profile">
     <h1>My profile</h1>
-    <section>
-        <img src="../images/profile_picture.jpg" alt="picture of user">
-        <h3>Name</h3>
-        <p>Daniel</p>
-        <h3>Nationality</h3>
-        <p>Dutch</p>
-        <h3>Age</h3>
-        <p>23</p>
-    </section>
-    <section>
-        <h3>Games</h3>
-        <p>Rainbow 6 Siege</p>
-        <h3>Platform</h3>
-        <p>PC</p>
-        <h3>Experience</h3>
-        <p>High platinum elo</p>
-    </section>
-    <form method="GET" action="/edit">
-        <button type="submit">Edit</button>
-    </form>
-    <% if (typeof details == 'object' && details) { %>
-        <h3>
-            <%= details.name %>
-        </h3>
-        <% } %>
+    <% if (typeof users == 'object' && users) { %>
+        <% users.forEach((users)=>{%>
+            <section>
+                <img src="../images/profile_picture.jpg" alt="picture of user">
+                <h3>Name</h3>
+                <p>
+                    <%= users.name %>
+                </p>
+                <h3>Nationality</h3>
+                <p>
+                    <%= users.nationality %>
+                </p>
+                <h3>Age</h3>
+                <p>
+                    <%= users.age %>
+                </p>
+            </section>
+            <section>
+                <h3>Games</h3>
+                <p>
+                    <%= users.game %>
+                </p>
+                <h3>Type of player</h3>
+                <p>
+                    <%= users.playertype %>
+                </p>
+                <h3>Platform</h3>
+                <p>
+                    <%= users.platform %>
+                </p>
+                <h3>Rank</h3>
+                <p>
+                    <%= users.rank %>
+                </p>
+            </section>
+            <%})%>
+                <% } %>
+                    <form method="GET" action="/edit">
+                        <button type="submit">Edit</button>
+                    </form>
 </body>
 <footer>
     <%- include('../partials/footer'); %>
