--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,4 +4,5 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Thasadith&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+<script defer src="/script.js"></script>
 <title>matching-app</title>
