--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -14,41 +14,27 @@
             <section>
                 <img src="../images/profile_picture.jpg" alt="picture of user">
                 <h3>Name</h3>
-                <p>
-                    <%= users.name %>
-                </p>
+                <p> <%= users.name %> </p>
                 <h3>Nationality</h3>
-                <p>
-                    <%= users.nationality %>
-                </p>
+                <p> <%= users.nationality %> </p>
                 <h3>Age</h3>
-                <p>
-                    <%= users.age %>
-                </p>
+                <p> <%= users.age %> </p>
             </section>
             <section>
                 <h3>Games</h3>
-                <p>
-                    <%= users.game %>
-                </p>
-                <h3>Type of player</h3>
-                <p>
-                    <%= users.playertype %>
-                </p>
+                <p> <%= users.game %> </p>
                 <h3>Platform</h3>
-                <p>
-                    <%= users.platform %>
-                </p>
+                <p> <%= users.platform %> </p>
+                <h3>Type of player</h3>
+                <p> <%= users.playertype %> </p>
                 <h3>Rank</h3>
-                <p>
-                    <%= users.rank %>
-                </p>
+                <p> <%= users.rank %> </p>
             </section>
-            <%})%>
-                <% } %>
-                    <form method="GET" action="/edit">
-                        <button type="submit">Edit</button>
-                    </form>
+        <%})%>
+    <% } %>
+    <form method="GET" action="/edit">
+        <button>Edit</button>
+    </form> 
 </body>
 <footer>
     <%- include('../partials/footer'); %>
